# lightning-camera

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
lib/: CMakeLists.txt
platform/: LICENSE.rtf  stormwatch.rc
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  FFmpegInit.cpp  FFmpegInit.hpp  FPSCounter.cpp  FPSCounter.hpp  MovingAverage.hpp  OpenCVInit.cpp  OpenCVInit.hpp  OpenCVUtils.hpp  Platform.cpp  Platform.hpp  PropertyManager.hpp  Server.cpp  Server.hpp  VideoID.cpp  VideoID.hpp  VideoLibrary.cpp  VideoLibrary.hpp  VideoSaveJob.cpp  VideoSaveJob.hpp  VideoTrigger.cpp  VideoTrigger.hpp  main.cpp
web/: CMakeLists.txt  index.html
web/css/: dashboard.css
web/js/: dashboard.js
